force-app/main/default/objects/WorkOrderLineItem/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Job Order Line Items (Department)</relationshipLabel>
    <relationshipName>Job_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>