force-app/main/default/objects/WorkOrderLineItem/fields/Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>Engine_Type__c</fullName>
    <formula>Vehicle_Model__r.Engine_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine</label>
    <type>Text</type>
</CustomField>