force-app/main/default/objects/WorkOrderLineItem/fields/fm_BOTTOM_Legal_Company_Data_Package__c.field-meta.xml
<CustomField>
    <fullName>fm_BOTTOM_Legal_Company_Data_Package__c</fullName>
    <formula>Department__r.LegalCompanyDataPackage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOTTOM Legal Company Data Package</label>
    <type>Text</type>
</CustomField>