force-app/main/default/objects/WorkOrderLineItem/fields/fm_EndDate__c.field-meta.xml
<CustomField>
    <fullName>fm_EndDate__c</fullName>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <formula>StartDate + ((Hours__c * Quantity * 60 / 24) / 60)</formula>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>