force-app/main/default/objects/WorkOrderLineItem/fields/fm_Engine_No__c.field-meta.xml
<CustomField>
    <fullName>fm_Engine_No__c</fullName>
    <description>This formula field display Engine no:</description>
    <formula>Asset.Engine_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine No</label>
    <type>Text</type>
</CustomField>