force-app/main/default/objects/WorkOrderLineItem/fields/fm_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>fm_Fuel_Type__c</fullName>
    <formula>Vehicle_Model__r.Fuel_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Type</label>
    <type>Text</type>
</CustomField>