force-app/main/default/objects/WorkOrderLineItem/fields/fm_ItemCode__c.field-meta.xml
<CustomField>
    <fullName>fm_ItemCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <formula>IF (
	RecordType.DeveloperName==&apos;Labor&apos;, Labor__r.ProductCode,
	IF (
		RecordType.DeveloperName ==&apos;Part&apos;, Part__r.ProductCode,
		&apos;&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Code</label>
    <type>Text</type>
</CustomField>