force-app/main/default/objects/WorkOrderLineItem/fields/fm_Notes__c.field-meta.xml
<CustomField>
    <fullName>fm_Notes__c</fullName>
    <formula>Location.Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes</label>
    <type>Text</type>
</CustomField>