force-app/main/default/objects/WorkOrderLineItem/fields/fm_PartCode__c.field-meta.xml
<CustomField>
    <fullName>fm_PartCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Code</label>
    <type>Text</type>
</CustomField>