force-app/main/default/objects/WorkOrderLineItem/fields/fm_Parts_Number__c.field-meta.xml
<CustomField>
    <fullName>fm_Parts_Number__c</fullName>
    <formula>ProductMasterFile__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts Number</label>
    <type>Text</type>
</CustomField>