force-app/main/default/objects/WorkOrderLineItem/fields/fm_Partsdescription__c.field-meta.xml
<CustomField>
    <fullName>fm_Partsdescription__c</fullName>
    <formula>ProductMasterFile__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts Description</label>
    <type>Text</type>
</CustomField>