force-app/main/default/objects/WorkOrderLineItem/fields/fm_PricebookId__c.field-meta.xml
<CustomField>
    <fullName>fm_PricebookId__c</fullName>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <formula>WorkOrder.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Id</label>
    <type>Text</type>
</CustomField>