force-app/main/default/objects/WorkOrderLineItem/fields/fm_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>fm_Registration_Date__c</fullName>
    <formula>Asset.Date_of_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>