force-app/main/default/objects/WorkOrderLineItem/fields/fm_Repair_Order_number__c.field-meta.xml
<CustomField>
    <fullName>fm_Repair_Order_number__c</fullName>
    <formula>Repair__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Order number</label>
    <type>Text</type>
</CustomField>