force-app/main/default/objects/WorkOrderLineItem/fields/fm_Shelf__c.field-meta.xml
<CustomField>
    <fullName>fm_Shelf__c</fullName>
    <formula>Location.Shelf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shelf</label>
    <type>Text</type>
</CustomField>