force-app/main/default/objects/WorkOrderLineItem/fields/fm_TechnicianUserId__c.field-meta.xml
<CustomField>
    <fullName>fm_TechnicianUserId__c</fullName>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <formula>Technician__r.User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician UserId</label>
    <type>Text</type>
</CustomField>