force-app/main/default/objects/WorkOrderLineItem/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Hours</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>