force-app/main/default/objects/WorkOrderLineItem/fields/Other_Legal_Basic_Data__c.field-meta.xml
<CustomField>
    <fullName>Other_Legal_Basic_Data__c</fullName>
    <label>Other Legal Basic Data</label>
    <type>TextArea</type>
</CustomField>