force-app/main/default/objects/WorkOrderLineItem/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Part</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Part</value>
        </filterItems>
        <filterItems>
            <field>Product2.Locale__c</field>
            <operation>equals</operation>
            <valueField>$User.Department_Locale__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Order Line Items (Part)</relationshipLabel>
    <relationshipName>Work_Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>