force-app/main/default/objects/WorkOrderLineItem/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Manoj Kumar
Created Date: 1/12/2020
Purpose :- After Sales service available of Customer.</description>
    <label>Inventory Item</label>
    <referenceTo>ProductItem</referenceTo>
    <relationshipLabel>Job Order Line Items</relationshipLabel>
    <relationshipName>Job_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>