force-app/main/default/objects/WorkOrderLineItem/fields/ProductMasterFile__c.field-meta.xml
<CustomField>
    <fullName>ProductMasterFile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Job Order Line Items (Product)</relationshipLabel>
    <relationshipName>Job_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>