force-app/main/default/objects/WorkOrderLineItem/fields/Repair_Order_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Order_Time__c</fullName>
    <formula>TIMEVALUE(Repair__r.Repair_Order_Date_and_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Order Time</label>
    <type>Time</type>
</CustomField>