force-app/main/default/objects/WorkOrderLineItem/fields/RepairPackageItem__c.field-meta.xml
<CustomField>
    <fullName>RepairPackageItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant. This field will capture the repair package line item for the selected repair package for Service Booking/Repair Quote.This field is created as part of user story GD-1014.</description>
    <label>Repair Package Item</label>
    <referenceTo>RepairPackageItem__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>