force-app/main/default/objects/WorkOrderLineItem/fields/RepairQuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>RepairQuoteLineItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LMS 3/2/2021
GD-1553
Purpose: Maintain a reference to the &quot;Creator&quot; Repair Quote Line Item</description>
    <label>Repair Quote Line Item</label>
    <referenceTo>Repair_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Job Order Line Items</relationshipLabel>
    <relationshipName>Job_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>