force-app/main/default/objects/WorkOrderLineItem/fields/ServiceCenter__c.field-meta.xml
<CustomField>
    <fullName>ServiceCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Service Center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Department__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Service_Center</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>