force-app/main/default/objects/WorkOrderLineItem/fields/Spare_Parts_Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Spare_Parts_Consultant_Name__c</fullName>
    <formula>$User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spare Parts Consultant Name</label>
    <type>Text</type>
</CustomField>