force-app/main/default/objects/WorkOrderLineItem/fields/Spare_Parts_Consultant_Surname__c.field-meta.xml
<CustomField>
    <fullName>Spare_Parts_Consultant_Surname__c</fullName>
    <formula>$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spare Parts Consultant Surname</label>
    <type>Text</type>
</CustomField>