force-app/main/default/objects/WorkOrderLineItem/fields/Stock_Availability__c.field-meta.xml
<CustomField>
    <fullName>Stock_Availability__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 1/12/2020
Purpose :- After Sales service available of Customer.</description>
    <formula>Product_Item__r.QuantityOnHand</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>