force-app/main/default/objects/WorkOrderLineItem/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Technician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ServiceCenter__c</field>
            <operation>equals</operation>
            <valueField>Employee__c.Department__c</valueField>
        </filterItems>
        <filterItems>
            <field>Employee__c.Role__c</field>
            <operation>equals</operation>
            <value>Technician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>