force-app/main/default/objects/WorkOrderLineItem/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>Job Order Line Items (Model)</relationshipLabel>
    <relationshipName>Job_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>