force-app/main/default/objects/WorkOrderLineItem/fields/VehicleModelLabor__c.field-meta.xml
<CustomField>
    <fullName>VehicleModelLabor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Vehicle Model (LTM)</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>Work Order Line Items (Vehicle Model (Labor))</relationshipLabel>
    <relationshipName>Work_Order_Line_Items_Labor</relationshipName>
    <type>Lookup</type>
</CustomField>