force-app/main/default/objects/WorkOrderLineItem/fields/VehicleModelPart__c.field-meta.xml
<CustomField>
    <fullName>VehicleModelPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant Created Date: 23rd Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Vehicle Model (DPOS)</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>