force-app/main/default/objects/WorkOrderLineItem/fields/VehicleServicePackageItem__c.field-meta.xml
<CustomField>
    <fullName>VehicleServicePackageItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By : Mayank Pant
Created Date : 18/1/2020
This field will capture the vehicle service line item for the selected at the time of Repair Quote.This field is created as part of user story GD-1014.</description>
    <label>Vehicle Service Package Item</label>
    <referenceTo>Vehicle_Service_Package_Item__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>