force-app/main/default/objects/WorkOrderLineItem/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>This formula field created for display VIN Number</description>
    <formula>Asset.VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN</label>
    <type>Text</type>
</CustomField>